{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 544,
  "lineage": "9fb94e97-efe4-9122-ae6a-6babd0cbb3f3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "demo_eu_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:464696867679:loadbalancer/app/demo-eu-alb/1292742531a96ad8",
            "arn_suffix": "app/demo-eu-alb/1292742531a96ad8",
            "dns_name": "demo-eu-alb-1635810880.us-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:464696867679:loadbalancer/app/demo-eu-alb/1292742531a96ad8",
            "idle_timeout": 600,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-eu-alb",
            "security_groups": [
              "sg-07bae1dfd7f067e70"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0183c6975da3f4de8"
              },
              {
                "subnet_id": "subnet-09e444320c63ed5ec"
              },
              {
                "subnet_id": "subnet-0ef45d2efff23802c"
              }
            ],
            "subnets": [
              "subnet-0183c6975da3f4de8",
              "subnet-09e444320c63ed5ec",
              "subnet-0ef45d2efff23802c"
            ],
            "vpc_id": "vpc-0c79c351d50af62e1",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.demo-public-1",
            "aws_subnet.demo-public-2",
            "aws_subnet.demo-public-3",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:464696867679:listener/app/demo-eu-alb/1292742531a96ad8/1bec1f7917031420",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:464696867679:targetgroup/nginx/1e484d6e9a7690cd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:464696867679:listener/app/demo-eu-alb/1292742531a96ad8/1bec1f7917031420",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:464696867679:loadbalancer/app/demo-eu-alb/1292742531a96ad8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.demo_eu_alb",
            "aws_alb_target_group.nginx",
            "aws_security_group.lb_sg",
            "aws_subnet.demo-public-1",
            "aws_subnet.demo-public-2",
            "aws_subnet.demo-public-3",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "nginx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:464696867679:targetgroup/nginx/1e484d6e9a7690cd",
            "arn_suffix": "targetgroup/nginx/1e484d6e9a7690cd",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:464696867679:targetgroup/nginx/1e484d6e9a7690cd",
            "lambda_multi_value_headers_enabled": false,
            "name": "nginx",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c79c351d50af62e1"
          },
          "dependencies": [
            "aws_alb.demo_eu_alb",
            "aws_security_group.lb_sg",
            "aws_subnet.demo-public-1",
            "aws_subnet.demo-public-2",
            "aws_subnet.demo-public-3",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0513a3197242484af",
            "owner_id": "464696867679",
            "tags": {
              "Name": "demo-IG"
            },
            "vpc_id": "vpc-0c79c351d50af62e1"
          },
          "dependencies": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02e3f5b31078086fb",
            "owner_id": "464696867679",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0513a3197242484af",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-public-1"
            },
            "vpc_id": "vpc-0c79c351d50af62e1"
          },
          "dependencies": [
            "aws_internet_gateway.demo-gw",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e91e61f5139d5144",
            "route_table_id": "rtb-02e3f5b31078086fb",
            "subnet_id": "subnet-0183c6975da3f4de8"
          },
          "dependencies": [
            "aws_internet_gateway.demo-gw",
            "aws_route_table.demo-public",
            "aws_subnet.demo-public-1",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0090307f62ce7b1c7",
            "route_table_id": "rtb-02e3f5b31078086fb",
            "subnet_id": "subnet-09e444320c63ed5ec"
          },
          "dependencies": [
            "aws_internet_gateway.demo-gw",
            "aws_route_table.demo-public",
            "aws_subnet.demo-public-2",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5a0d2387da20e54",
            "route_table_id": "rtb-02e3f5b31078086fb",
            "subnet_id": "subnet-0ef45d2efff23802c"
          },
          "dependencies": [
            "aws_internet_gateway.demo-gw",
            "aws_route_table.demo-public",
            "aws_subnet.demo-public-3",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464696867679:security-group/sg-0cc6638ed5ddf9382",
            "description": "controls direct access to application instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc6638ed5ddf9382",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Access from ALB",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07bae1dfd7f067e70"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "application-instances-sg",
            "name_prefix": null,
            "owner_id": "464696867679",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c79c351d50af62e1"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464696867679:security-group/sg-07bae1dfd7f067e70",
            "description": "controls access to the application ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07bae1dfd7f067e70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-ELB",
            "name_prefix": null,
            "owner_id": "464696867679",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c79c351d50af62e1"
          },
          "dependencies": [
            "aws_vpc.demo-tf"
          ]
        },
        {
          "status": "tainted",
          "deposed": "bac9f2a6",
          "schema_version": 1,
          "attributes": null,
          "dependencies": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464696867679:subnet/subnet-07da24f18c8327de3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.21.40.0/24",
            "id": "subnet-07da24f18c8327de3",
            "map_public_ip_on_launch": false,
            "owner_id": "464696867679",
            "tags": {
              "Name": "demo-private-1"
            },
            "vpc_id": "vpc-0c79c351d50af62e1"
          },
          "dependencies": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464696867679:subnet/subnet-07f154bac787078fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.21.50.0/24",
            "id": "subnet-07f154bac787078fc",
            "map_public_ip_on_launch": false,
            "owner_id": "464696867679",
            "tags": {
              "Name": "demo-private-2"
            },
            "vpc_id": "vpc-0c79c351d50af62e1"
          },
          "dependencies": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464696867679:subnet/subnet-0d8e3e150c1207103",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.21.60.0/24",
            "id": "subnet-0d8e3e150c1207103",
            "map_public_ip_on_launch": false,
            "owner_id": "464696867679",
            "tags": {
              "Name": "demo-private-3"
            },
            "vpc_id": "vpc-0c79c351d50af62e1"
          },
          "dependencies": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464696867679:subnet/subnet-0183c6975da3f4de8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.21.10.0/24",
            "id": "subnet-0183c6975da3f4de8",
            "map_public_ip_on_launch": true,
            "owner_id": "464696867679",
            "tags": {
              "Name": "demo-public-1"
            },
            "vpc_id": "vpc-0c79c351d50af62e1"
          },
          "dependencies": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464696867679:subnet/subnet-09e444320c63ed5ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.21.20.0/24",
            "id": "subnet-09e444320c63ed5ec",
            "map_public_ip_on_launch": true,
            "owner_id": "464696867679",
            "tags": {
              "Name": "demo-public-2"
            },
            "vpc_id": "vpc-0c79c351d50af62e1"
          },
          "dependencies": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464696867679:subnet/subnet-0ef45d2efff23802c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.21.30.0/24",
            "id": "subnet-0ef45d2efff23802c",
            "map_public_ip_on_launch": true,
            "owner_id": "464696867679",
            "tags": {
              "Name": "demo-public-3"
            },
            "vpc_id": "vpc-0c79c351d50af62e1"
          },
          "dependencies": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-tf",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464696867679:vpc/vpc-0c79c351d50af62e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-0197ddd6a4a8db9a7",
            "default_route_table_id": "rtb-0b99aa8eeaf5e7e3e",
            "default_security_group_id": "sg-070c3b0dcba69cc6c",
            "dhcp_options_id": "dopt-43b3963a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c79c351d50af62e1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b99aa8eeaf5e7e3e",
            "owner_id": "464696867679",
            "tags": {
              "Name": "demo-terraform"
            }
          }
        }
      ]
    }
  ]
}